# novela

./: .gitignore  .gitmodules  CMakeLists.txt  remove_submodule.fish
libraries/: BusIO  CPFS  GFX  caneta-c  caneta-sdl  dvi  transmission-arduino  transmission-cpp  transmission-esp32  transmission-macos
libraries/novela-arduino/: CMakeLists.txt  library.properties
libraries/novela-arduino/examples/: CMakeLists.txt
libraries/novela-arduino/examples/novela-arduino-1bit/: CMakeLists.txt  novela-arduino-1bit.ino
libraries/novela-arduino/src/: ReliableConnection.cpp  ReliableConnection.h  ReliableConnectionSerial1.cpp  ReliableConnectionSerial1.h  ReliableConnectionUsbCdc.cpp  ReliableConnectionUsbCdc.h  arduino_clock.cpp  gfx_canvas.cpp  gfx_canvas.h  hstx_cursor.cpp  hstx_cursor.h  serial_logger.cpp  serial_logger.h  soft_cursor.cpp  soft_cursor.h
libraries/novela-cpp/: CMakeLists.txt  library.properties
libraries/novela-cpp/src/: Connection.cpp  Connection.h  bell.cpp  bell.h  canvas.cpp  canvas.h  clock.h  colors.h  cursor.cpp  cursor.h  logger.cpp  logger.h  novela.cpp  novela.h  novela_vterm.cpp  novela_vterm.h  ring_buffer.h  soft_cursor.h
libraries/novela-esp/: CMakeLists.txt  library.properties
libraries/novela-esp/examples/novela-esp/: gfx_conf.h  novela-esp.ino
libraries/novela-esp/src/: lgfx_canvas.cpp  lgfx_canvas.h
libraries/novela-macos/: CMakeLists.txt
libraries/novela-macos/src/: console_logger.h  main.cpp  sdl_cursor.cpp  sdl_cursor.h
libraries/novela-sdl/: CMakeLists.txt
libraries/novela-sdl/src/: lgfx_sdl_canvas.cpp  lgfx_sdl_canvas.h  sdl_cursor.cpp  sdl_cursor.h
libraries/tela-arduino/: CMakeLists.txt  library.properties
libraries/tela-arduino/examples/: CMakeLists.txt
libraries/tela-arduino/examples/tela-arduino-1bit/: CMakeLists.txt  tela-arduino-1bit.ino
libraries/tela-arduino/src/: arduino_clock.h
libraries/tela-cpp/: CMakeLists.txt  library.properties
libraries/tela-cpp/src/: canvas.h  clock.cpp  colors.h  cursor.cpp  cursor.h  logger.cpp  logger.h  novela.cpp  novela.h  soft_cursor.cpp
libraries/tela-esp/: CMakeLists.txt  library.properties
libraries/tela-esp/examples/tela-esp/: tela-esp.ino
libraries/tela-esp/src/: lgfx_canvas.cpp  lgfx_canvas.h
libraries/tela-sdl/: CMakeLists.txt
libraries/tela-sdl/src/: lgfx_sdl_canvas.cpp  lgfx_sdl_canvas.h  sdl_cursor.h
libraries/vterm/: CMakeLists.txt  library.properties
libraries/vterm/examples/vterm-test/: vterm-test.ino
novela-macos/: CMakeLists.txt
novela-macos/src/: console_logger.cpp  main.cpp  sdl_cursor.cpp  system_clock.cpp
novela-stdio/: CMakeLists.txt  NovelaMain.cpp  NovelaMain.h  main.cpp
tela-macos/: CMakeLists.txt
tela-macos/src/: main.cpp  system_clock.h
tela-stdio/: CMakeLists.txt  TelaMain.cpp  TelaMain.h  main.cpp
tests/: CMakeLists.txt  main.cpp
