cmake_minimum_required(VERSION 3.25)
project(tela)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
set(CMAKE_C_FLAGS_DEBUG "-g -O0")

set(LIB ${CMAKE_SOURCE_DIR}/libraries)
set(GFX_DIR ${LIB}/GFX)
set(VTERM_DIR ${LIB}/vterm)
set(VTERM_LIB_SOURCE_DIR ${VTERM_DIR}/src)
set(TRANSMISSION_LIB_DIR ${LIB}/transmission-cpp)
set(TRANSMISSION_ARDUINO_DIR ${LIB}/transmission-arduino)
set(TRANSMISSION_ESP32_DIR ${LIB}/transmission-esp32)
set(TRANSMISSION_MACOS_DIR ${LIB}/transmission-macos)

set(TELA_LIB_DIR ${LIB}/tela-cpp)
set(TELA_LIB_SOURCE_DIR ${TELA_LIB_DIR}/src)

set(TELA_ARDUINO_DIR ${LIB}/tela-arduino)
set(TELA_ARDUINO_SOURCE_DIR ${TELA_ARDUINO_DIR}/src)

set(TELA_ESP_DIR ${CMAKE_SOURCE_DIR}/libraries/tela-esp)
set(TELA_ESP_SOURCE_DIR ${TELA_ESP_DIR}/src)

set(TELA_SDL_DIR ${CMAKE_SOURCE_DIR}/libraries/tela-sdl)
set(TELA_SDL_SOURCE_DIR ${TELA_SDL_DIR}/src)

add_subdirectory("libraries/transmission-cpp")
add_subdirectory("libraries/transmission-macos")
add_subdirectory("libraries/caneta-c")
add_subdirectory("libraries/caneta-sdl")
add_subdirectory("libraries/tela-cpp")
add_subdirectory("libraries/tela-arduino")
add_subdirectory("libraries/tela-esp")
add_subdirectory("libraries/tela-sdl")
add_subdirectory("tela-macos")
add_subdirectory("libraries/vterm")
add_subdirectory("tela-stdio")
add_subdirectory("tests/")
